docs: update CLAUDE.md and coding-style.md; deslop sim/views/
CLAUDE.md: add /benchmark route, test count (27→84), all new sim/report
and benchmark key files, scene-setting turn 0 design decision, epistemic
hedging classification decision, no-seed-anchors decision.

coding-style.md: integrate deslop skill — comment slop catalog, defensive
check patterns, Java 25 modernization table, Spring/Embabel idioms, test
slop rules (delete vs. fix), and process checklist.

sim/views: remove section banners, field-group comments, tautological
Javadoc, redundant null checks, and unused defensive guards across
AnchorBrowseController, AnchorManipulationPanel, AnchorTimelinePanel,
BenchmarkPanel, BenchmarkView, ConditionComparisonPanel,
ContextInspectorPanel, ConversationPanel, DriftSummaryPanel,
ExperimentConfigPanel, ExperimentHistoryPanel, ExperimentProgressPanel,
FactDrillDownPanel, KnowledgeBrowserPanel, RunInspectorView.